--- a/src/makefile
+++ b/src/makefile
@@ -1,3 +1,3 @@
 # Group 40
   all:
-	gcc -g -o stage1exe lexer.c parser.c lookuptable.c utils.c tree.c driver.c 
+	gcc lexer.c parser.c lookuptable.c utils.c tree.c semantics.c symbolTable.c typechecker.c ast.c	
